# dynamic-agent-assembler

./: README.md  config.yaml  pyproject.toml
examples/: basic_usage.py  executor_example.py  team_types.py
src/dynamic_agent_assembler/: __init__.py  agent_assembler.py  assembler.py  capability_registry.py  cli.py  config.py  executor.py  task_analyzer.py  team_manager.py  vector_search.py
tests/: test_core.py
